# tp1

./: CMakeLists.txt  Main.cpp  Ordenador.h  heapsort.cpp  insercion.cpp  main.cpp  mergesort.cpp  quicksort.cpp  radixsort.cpp  seleccion.cpp
